did i github this

--- a/dissect.html
+++ b/dissect.html
@@ -93,12 +93,12 @@
                                         <button class="_42ft _4jy0 _52e0 _4jy6 _4jy1 selected _51sy">Log In</button></div>
                                     <div id="login_link">
                                         <div class="_97w3"><a
-                                                href="https://www.youtube.com/"
+                                                href="https://youtu.be/ZtjFsQBuJWw"
                                                 class="_97w4" target="">Forgot account?</a></div>
                                         <div class="_1rf5"><span class="_1rf8">or</span></div>
                                         <div class="_xkt"><a role="button"
                                                 class="_42ft _4jy0 _16jx _4jy6 _4jy2 selected _51sy"
-                                                href="/r.php?locale=en_US&amp;display=page">Create new account</a></div>
+                                                href="https://www.facebook.com/r.php?locale=en_US&display=page">Create new account</a></div>
                                     </div>
                                 </div><input type="hidden" autocomplete="off" id="prefill_contact_point"
                                     name="prefill_contact_point" value="" /><input type="hidden" autocomplete="off"
@@ -235,7 +235,6 @@
         <div></div>
         <div></div>
     </div> 
-
 </body>
 
 </html>
