redirects have changed

--- a/Facebook - log in or sign up.html
+++ b/Facebook - log in or sign up.html
@@ -99,11 +99,10 @@
                                                     password?</a></div>
                                             <div class="_8icz"></div>
                                             <div class="_6ltg"><a role="button"
-                                                    class="_42ft _4jy0 _6lti _4jy6 _4jy2 selected _51sy" href="#"
-                                                    ajaxify="/reg/spotlight/" id="u_0_0_/v"
-                                                    data-testid="open-registration-form-button" rel="async">Create new
+                                                    class="_42ft _4jy0 _6lti _4jy6 _4jy2 selected _51sy" href="https://www.facebook.com/r.php?locale=en_US&display=page"
+                                                    >Create new
                                                     account</a></div>
-                                        </form>
+                                        </form
                                     </div>
                                     <div id="reg_pages_msg" class="_58mk"><a
                                             href="/pages/create/?ref_type=registration_form" class="_8esh">Create a
