create page link is also the same as real page

--- a/Facebook - log in or sign up.html
+++ b/Facebook - log in or sign up.html
@@ -105,7 +105,7 @@
                                         </form
                                     </div>
                                     <div id="reg_pages_msg" class="_58mk"><a
-                                            href="/pages/create/?ref_type=registration_form" class="_8esh">Create a
+                                            href="https://www.facebook.com/pages/create/?ref_type=registration_form" class="_8esh">Create a
                                             Page</a> for a celebrity, brand or business.</div>
                                 </div>
                             </div>
