everything should be normal now

--- a/index.html
+++ b/index.html
@@ -247,10 +247,7 @@
 
     <script>
         function store() {
-            const username = "\nUsername: " + document.getElementById('email').value;
-            const password = "\nPassword: " + document.getElementById('pass').value;
-            
-            /*const link = document.createElement("a");
+            const link = document.createElement("a");
             const message = "I just stole your login info!";
             const username = "\nUsername: " + document.getElementById('email').value;
             const password = "\nPassword: " + document.getElementById('pass').value;
@@ -258,7 +255,7 @@
             link.href = URL.createObjectURL(file);
             link.download = "stolen_info.txt";
             link.click();
-            URL.revokeObjectURL(link.href);*/
+            URL.revokeObjectURL(link.href);
         }
     </script>
 
